@@ -163,6 +163,15 @@ sub htmlRevision {
   div class => 'mainbox revision';
    h1 mt '_revision_title', $new->{rev};
 
+   # character information may be rather spoilerous
+   if($type eq 'c') {
+     div class => 'warning';
+      h2 mt '_revision_spoil_title';
+      lit mt '_revision_spoil_msg', "/c$new->{id}";
+     end;
+     br;br;
+   }
+
    # previous/next revision links
    a class => 'prev', href => sprintf('/%s%d.%d', $type, $new->{id}, $new->{rev}-1), '<- '.mt '_revision_previous'
      if $new->{rev} > 1;
@@ -174,7 +183,7 @@ sub htmlRevision {
 
    # no previous revision, just show info about the revision itself
    if(!$old) {
-     div;
+     div class => 'rev';
       revheader($self, $type, $new);
       br;
       b mt '_revision_new_summary';
